--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,36 +15,40 @@ Imports:
     DT (>= 0.25),
     dplyr,
     fastLink,
-    gender,
-    ggplot2,
-    ggvenn,
     golem (>= 0.3.5),
-    haven,
     htmlwidgets,
     jsonlite,
-    lubridate,
     magrittr,
-    readxl,
     shiny (>= 1.7.2),
     shinydashboard,
     shinydashboardPlus (>= 2.0.3),
     shinyWidgets,
     tidyr,
     tidyselect,
-    vroom,
-    ggpubr,
-    shinybusy,
-    shinyjs
+    tibble
 Suggests: 
     pkgload,
     knitr,
     purrr,
     rmarkdown,
     spelling,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    ggplot2,
+    ggvenn,
+    ggpubr,
+    scales,
+    haven,
+    readxl,
+    vroom,
+    gender,
+    lubridate,
+    shinybusy,
+    waiter,
+    shinyjs,
+    zip
 Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
 VignetteBuilder: knitr
